supervisor-macros/tests/ui/compile_fail/missing_keyword.stderr
error: expected `spawn:` or `disabled`
 --> tests/ui/compile_fail/missing_keyword.rs:7:35
  |
7 |     node A = Terminate, deps: [], oops;
  |                                   ^^^^
